# CapstoneProject

./: .gitmodules  README.md
.github/workflows/: c-cpp.yml
Capstone/: .cproject  .mxproject  .project  Capstone Debug.launch  Capstone.ioc
Capstone/Core/Inc/: BufferedSerial.hpp  MPUXX50.h  mainpp.h  stm32f4xx_it.h
Capstone/Core/Inc/custom_msg/: encoder_input_msg.h  encoder_output_msg.h  mpu_msg.h  obj_msgs.h  stanley_outputs.h
Capstone/Core/Inc/gazebo_msgs/: ApplyBodyWrench.h
Capstone/Core/Src/: BufferedSerial.cpp  MPUXX50.cpp  main.cpp  mainpp.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Capstone/Debug/: Capstone.elf  Capstone.list  Capstone.map  makefile  objects.list
Capstone/Debug/Core/Src/: BufferedSerial.cyclo  BufferedSerial.d  BufferedSerial.su  MPUXX50.cyclo  MPUXX50.d  MPUXX50.su  main.cyclo  main.d  main.su  mainpp.cyclo  mainpp.d  mainpp.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
MPU9250-MPU6500-STM32/: MPUXX50.cpp  MPUXX50.h  main.cpp
examples/: README.md  convert.cpp
ros_ws/catkin_ws/devel/: _setup_util.py
ros_ws/gazebo_ws/: README.md
ros_ws/gazebo_ws/src/custom_msg/: CMakeLists.txt  package.xml
ros_ws/gazebo_ws/src/jetbot_navigation/: CMakeLists.txt  package.xml
ros_ws/gazebo_ws/src/stanley_sim/: camera.py  (+3 more)
ros_ws/stm32_ws/: frames.gv  run.sh  run_clean.sh  run_manual.sh
ros_ws/stm32_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_ws/stm32_ws/src/: .gitignore
ros_ws/stm32_ws_mod/: stm32_rviz.rviz
ros_ws/stm32_ws_mod/devel/: local_setup.sh
(+130 files in other folders)
